# acquire-driver-hdcam

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: auto-merge.yml  build.yml  nightly-release.yml  release.yml  test_pr.yml  unsupported_build.yml
cmake/: cpack.cmake  hdcam.cmake  simd.cmake
src/: CMakeLists.txt  dcam.camera.c  dcam.camera.h  dcam.driver.c  dcam.error.c  dcam.error.h  dcam.getset.c  dcam.getset.h  dcam.prelude.h
tests/: CMakeLists.txt  abort-finite-acquisition.cpp  dcam-check.cpp  dcam-list-triggers.cpp  dcam-reset-on-fail.cpp  flash-one-video-stream.cpp  fusion-one-video-stream.cpp  list-devices.cpp  one-video-stream.cpp  orca-flash-check.cpp  orca-flash-one-video-stream.cpp  set-output-trigger.cpp  set-roi.cpp  unit-tests.cpp
